--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>Overlay Box</title>
     <link rel="stylesheet" href="try.css">
@@ -105,3 +106,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
