--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="page-title">Hi Amishaaaaaa❤️</h1>
 
     <div class="main-box">
-        <p class="question-text">Will you be my Valentine?🥺</p>
+        <p class="question-text">Willl you be my Valentine?🥺</p>
 
         <div id="ques-image">
             <img src="flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="image">
@@ -106,4 +106,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
