--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <meta charset="UTF-8">
     <title>Overlay Box</title>
     <link rel="stylesheet" href="try.css">
@@ -12,7 +13,7 @@
     <h1 class="page-title">Hi Amishaaaaaa❤️</h1>
 
     <div class="main-box">
-        <p class="question-text">Willl you be my Valentine?🥺</p>
+        <p class="question-text">Will you be my Valentine?🥺</p>
 
         <div id="ques-image">
             <img src="flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="image">
@@ -106,5 +107,3 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
-
