--- a/result.html
+++ b/result.html
@@ -32,7 +32,7 @@
             <h1>Hehe Thank You❤️</h1>
 
             <p class="top-text">
-                Me to myself after doing this.
+                Mee to myself after doing this.
             </p>
 
             <div class="image-stack">
@@ -79,3 +79,4 @@
 </body>
 
 </html>
+
