--- a/faq.html
+++ b/faq.html
@@ -66,8 +66,31 @@ document.querySelectorAll(".faq-question").forEach(btn => {
     });
 
 });
+
+    document.querySelectorAll(".faq-question").forEach(btn => {
+
+    btn.addEventListener("click", () => {
+
+        const currentItem = btn.parentElement;
+        const allItems = document.querySelectorAll(".faq-item");
+
+        allItems.forEach(item => {
+            if (item !== currentItem) {
+                item.classList.remove("active");
+            }
+        });
+
+        currentItem.classList.toggle("active");
+
+        // 👇 remove focus after click
+        btn.blur();
+    });
+
+});
+
 </script>
 
 
 </body>
 </html>
+
