--- a/faq.html
+++ b/faq.html
@@ -63,34 +63,17 @@ document.querySelectorAll(".faq-question").forEach(btn => {
 
         // Toggle current one
         currentItem.classList.toggle("active");
-    });
 
-});
-
-    document.querySelectorAll(".faq-question").forEach(btn => {
-
-    btn.addEventListener("click", () => {
-
-        const currentItem = btn.parentElement;
-        const allItems = document.querySelectorAll(".faq-item");
-
-        allItems.forEach(item => {
-            if (item !== currentItem) {
-                item.classList.remove("active");
-            }
-        });
-
-        currentItem.classList.toggle("active");
-
-        // 👇 remove focus after click
+        // Remove focus after click (mobile fix)
         btn.blur();
     });
 
 });
-
 </script>
+
 
 
 </body>
 </html>
+
 
